@@ -62,6 +62,14 @@
 	</TR>
 	<TR CLASS="LIGHT">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
+			<IMG src="img/home.gif" width="16" alt=""> <B>{t}Location:{/t}</B>
+		</TD>
+		<TD CLASS="fright" WIDTH="99%">
+			<INPUT TYPE="text" NAME="search[location]" {tip text="Enter node location"}>
+		</TD>
+	</TR>
+	<TR CLASS="LIGHT">
+		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
 			<IMG src="img/info1.gif" width="16" alt=""> <B>{t}Description:{/t}</B>
 		</TD>
 		<TD CLASS="fright" WIDTH="99%">
