@@ -12,6 +12,7 @@ version ? (????-??-??):
     (polish dow.os.) and Register of Business Entities Number (polish EDG/KRS)
     fields in customer data (alec)
   - accounts must have unique logins in domain context only (alec)
+  - added Location field in computer data (alec)
 
 version 1.9.2 Thanos (2006-07-15):
   
